--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^7.12.1",
     "jest": "^26.6.1",
     "prettier": "^2.1.2",
+    "tailwindcss": "^1.9.6",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5",
     "vite": "^1.0.0-rc.8",
