--- a/.github/workflows/run-lint.yaml
+++ b/.github/workflows/run-lint.yaml
@@ -12,9 +12,8 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
-      - name: Run linters
+      - name: Run eslint
         uses: wearerequired/lint-action@v1
         with:
           github_token: ${{ secrets.github_token }}
           eslint: true
-          prettier: true
