--- a/.github/workflows/run-test-suite.yaml
+++ b/.github/workflows/run-test-suite.yaml
@@ -4,9 +4,13 @@ jobs:
   run-jest:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-      - run: npm ci
-      - run: npm run test
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test
