--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "dist/**/*.js",
     "dist/**/*.d.ts"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc -p tsconfig.main.json",
     "lint": "npx prettier --write .",
     "test": "jest",
     "dev": "vite"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "@vue/compiler-sfc": "^3.0.2",
@@ -35,11 +36,13 @@
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5",
     "vite": "^1.0.0-rc.8",
-    "vue": "^3.0.2"
+    "vue": "^3.0.2",
+    "vue-router": "^4.0.0-rc.1"
   },
   "prettier": {
     "singleQuote": true,
     "arrowParens": "avoid",
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "endOfLine": "crlf"
   }
 }
