--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-form-validation",
-  "version": "1.0.7",
+  "version": "2.0.0",
   "description": "Form validation for Vue 3",
   "author": {
     "name": "jens",
@@ -25,8 +25,9 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
+    "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "@vue/compiler-sfc": "^3.0.2",
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
@@ -34,7 +35,7 @@
     "tailwindcss": "^1.9.6",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5",
-    "vite": "^1.0.0-rc.8",
+    "vite": "^1.0.0-rc.9",
     "vue": "^3.0.2",
     "vue-router": "^4.0.0-rc.2"
   },
