--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@typescript-eslint/parser": "^4.7.0",
     "@vue/compiler-sfc": "^3.0.2",
     "eslint": "^7.13.0",
+    "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "tailwindcss": "^1.9.6",
     "ts-jest": "^26.4.4",
@@ -50,5 +52,11 @@
     "arrowParens": "avoid",
     "trailingComma": "none",
     "endOfLine": "crlf"
+  },
+  "husky": {
+    "hooks": {}
+  },
+  "lint-staged": {
+    "*.ts": "eslint --fix"
   }
 }
