--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "vetur.validation.template": false,
+  "vetur.experimental.templateInterpolationService": true,
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
