--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@typescript-eslint/parser": "^4.7.0",
     "@vue/compiler-sfc": "^3.0.2",
     "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-vue": "^7.1.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
