--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "css.validate": false
+  "css.validate": false,
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
