--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
-    "tailwindcss": "^1.9.6",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.0.5",
+    "typescript": "^4.1.2",
     "vite": "^1.0.0-rc.9",
     "vue": "^3.0.2",
-    "vue-router": "^4.0.0-rc.2"
+    "vue-router": "^4.0.0-rc.3"
   },
   "prettier": {
     "singleQuote": true,
