--- a/package.json
+++ b/package.json
@@ -31,23 +31,23 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.7",
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
-    "@vue/compiler-sfc": "^3.0.2",
-    "eslint": "^7.13.0",
+    "@types/node": "^14.14.10",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "@vue/compiler-sfc": "^3.0.3",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-vue": "^7.1.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.1.2",
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.9",
-    "vue": "^3.0.2",
-    "vue-router": "^4.0.0-rc.3"
+    "vite": "^1.0.0-rc.13",
+    "vue": "^3.0.3",
+    "vue-router": "^4.0.0-rc.5"
   },
   "prettier": {
     "singleQuote": true,
@@ -56,9 +56,8 @@
     "endOfLine": "crlf"
   },
   "husky": {
-    "hooks": {}
-  },
-  "lint-staged": {
-    "*.ts": "eslint --fix"
+    "hooks": {
+      "pre-commit": "npx eslint --rule=\"no-console:error\" --fix-dry-run main"
+    }
   }
 }
