--- a/package.json
+++ b/package.json
@@ -30,24 +30,25 @@
     "dev": "vite"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.10",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "@vue/compiler-sfc": "^3.0.3",
-    "eslint": "^7.14.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.21",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "@vitejs/plugin-vue": "^1.0.6",
+    "@vue/compiler-sfc": "^3.0.5",
+    "eslint": "^7.18.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-vue": "^7.1.0",
-    "husky": "^4.3.0",
+    "eslint-plugin-vue": "^7.4.1",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.2",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13",
-    "vue": "^3.0.3",
-    "vue-router": "^4.0.0-rc.5"
+    "typescript": "^4.1.3",
+    "vite": "^2.0.0-beta.31",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3"
   },
   "prettier": {
     "singleQuote": true,
