type improvements, folder structure, extra features (v3.0.0)

--- a/vite/tsconfig.json
+++ b/vite/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["DOM", "ES2020"],
+    "lib": ["DOM"],
     "strict": true,
+    "moduleResolution": "node",
+    "isolatedModules": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
