--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JensD98/vue3-form-validation.git"
+    "url": "https://github.com/JensDll/vue3-form-validation#readme"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,16 +24,18 @@
     "validation"
   ],
   "scripts": {
-    "build": "npx tsc -p tsconfig.main.json",
+    "build": "npx tsc --project ./main",
     "lint": "npx prettier --write .",
-    "test": "jest",
+    "test": "jest --config ./main/jest.config.ts",
+    "test-dts": "npx tsd",
+    "test-all": "npm run build && npm run test && npm run test-dts",
     "dev": "vite"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.21",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
+    "@types/node": "^14.14.27",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "@vitejs/plugin-vue": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.5",
     "eslint": "^7.18.0",
@@ -44,9 +46,11 @@
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.31",
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
+    "tsd": "^0.14.0",
+    "typescript": "^4.1.5",
+    "vite": "^2.0.0-beta.69",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3"
   },
@@ -60,5 +64,8 @@
     "hooks": {
       "pre-commit": "npx eslint --rule=\"no-console:error\" --fix-dry-run main"
     }
+  },
+  "tsd": {
+    "directory": "test-dts"
   }
 }
