--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-form-validation",
   "version": "3.0.0",
-  "description": "Form validation for Vue 3",
+  "description": "Vue composition function for Form Validation",
   "author": {
     "name": "jens",
     "email": "jens@doellmann.com"
@@ -49,6 +49,7 @@
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "pinst": "^2.1.4",
     "prettier": "^2.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "ts-jest": "^26.5.1",
