--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/parser": "^4.15.0",
     "@vitejs/plugin-vue": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.2.4",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-vue": "^7.4.1",
@@ -50,8 +51,9 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "pinst": "^2.1.4",
+    "postcss": "^8.2.6",
     "prettier": "^2.2.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+    "tailwindcss": "^2.0.3",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "tsd": "^0.14.0",
