--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "vue3-form-validation",
-  "version": "2.1.2",
-  "description": "Form validation for Vue 3",
+  "version": "3.0.0",
+  "description": "Vue composition function for Form Validation",
   "author": {
     "name": "jens",
     "email": "jens@doellmann.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JensD98/vue3-form-validation.git"
+    "url": "https://github.com/JensDll/vue3-form-validation#readme"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,32 +21,44 @@
     "vue",
     "vuejs",
     "form",
-    "validation"
+    "validation",
+    "utils",
+    "vue-use"
   ],
   "scripts": {
-    "build": "npx tsc -p tsconfig.main.json",
+    "build": "npx eslint --rule=\"no-console:error\" --fix-dry-run main && npx tsc --project ./main",
     "lint": "npx prettier --write .",
-    "test": "jest",
-    "dev": "vite"
+    "test": "jest --config ./main/jest.config.ts",
+    "test-dts": "npx tsd",
+    "test-all": "npm run build && npm run test && npm run test-dts",
+    "dev": "vite",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.21",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
+    "@types/node": "^14.14.27",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "@vitejs/plugin-vue": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.2.4",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-vue": "^7.4.1",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "pinst": "^2.1.4",
+    "postcss": "^8.2.6",
     "prettier": "^2.2.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.31",
+    "tailwindcss": "^2.0.3",
+    "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
+    "tsd": "^0.14.0",
+    "typescript": "^4.1.5",
+    "vite": "^2.0.0-beta.69",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3"
   },
@@ -56,9 +68,7 @@
     "trailingComma": "none",
     "endOfLine": "crlf"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npx eslint --rule=\"no-console:error\" --fix-dry-run main"
-    }
+  "tsd": {
+    "directory": "test-dts"
   }
 }
