--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.27",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "@vitejs/plugin-vue": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.5",
     "autoprefixer": "^10.2.4",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-vue": "^7.4.1",
-    "husky": "^5.0.9",
+    "husky": "^5.1.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "pinst": "^2.1.4",
@@ -58,9 +58,9 @@
     "ts-node": "^9.1.1",
     "tsd": "^0.14.0",
     "typescript": "^4.1.5",
-    "vite": "^2.0.0-beta.69",
+    "vite": "^2.0.1",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.4"
   },
   "prettier": {
     "singleQuote": true,
