--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,6 @@
   },
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "spellright.language": ["en"],
-  "spellright.documentTypes": [
-    "markdown",
-    "latex",
-    "plaintext",
-    "git-commit"
-  ],
+  "spellright.documentTypes": ["markdown", "latex", "plaintext", "git-commit"],
   "volar.tsPlugin": true
 }
