--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
     "vue-use"
   ],
   "scripts": {
-    "build": "npx eslint --rule=\"no-console:error\" --max-warnings 0 --fix-dry-run main && npx tsc --project ./main",
-    "lint": "npx prettier --write .",
+    "build": "npm exec eslint -- --rule=\"no-console:error\" --max-warnings 0 --fix-dry-run main && npm exec tsc -- --project ./main",
     "test": "jest --config ./main/jest.config.ts",
-    "test-dts": "npx tsd",
+    "test-dts": "npm exec tsd",
     "test-all": "npm run build && npm run test && npm run test-dts",
     "dev": "vite",
     "postinstall": "husky install",
@@ -37,28 +36,30 @@
     "postpublish": "pinst --enable"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.22",
-    "@types/node": "^15.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "@vitejs/plugin-vue": "^1.2.1",
+    "@heroicons/vue": "^1.0.1",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "@vitejs/plugin-vue": "^1.2.2",
     "@vue/compiler-sfc": "^3.0.11",
     "autoprefixer": "^10.2.5",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^7.8.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^7.9.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^11.0.0",
     "pinst": "^2.1.6",
-    "postcss": "^8.2.9",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.4",
-    "ts-jest": "^26.5.4",
+    "postcss": "^8.2.15",
+    "postcss-nesting": "^8.0.1",
+    "prettier": "^2.3.0",
+    "tailwindcss": "^2.1.2",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
-    "tsd": "^0.14.0",
-    "typescript": "^4.2.3",
-    "vite": "^2.1.5",
+    "tsd": "^0.15.1",
+    "typescript": "^4.2.4",
+    "vite": "^2.3.2",
     "vue": "^3.0.7",
     "vue-router": "^4.0.4"
   },
@@ -69,6 +70,13 @@
     "endOfLine": "crlf"
   },
   "tsd": {
-    "directory": "test-dts"
+    "directory": "main/test-dts",
+    "compilerOptions": {
+      "lib": [
+        "DOM",
+        "ES2020"
+      ],
+      "strict": true
+    }
   }
 }
