--- a/vite/tsconfig.json
+++ b/vite/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
-    "lib": ["DOM"],
-    "strict": true,
+    "target": "esnext",
+    "module": "esnext",
     "moduleResolution": "node",
-    "isolatedModules": true,
+    "strict": true,
+    "jsx": "preserve",
+    "sourceMap": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "lib": ["esnext", "dom"],
+    "types": ["vite/client"]
+  },
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
