--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-form-validation",
-  "version": "3.3.4",
+  "version": "3.3.5",
   "description": "Vue composition function for Form Validation",
   "author": {
     "name": "jens",
@@ -31,7 +31,7 @@
     "test-dts": "npx tsd",
     "test-all": "npm run build && npm run test && npm run test-dts",
     "dev": "vite",
-    "postinstall": "husky install",
+    "_postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable"
   },
