--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
     "url": "https://github.com/JensDll/vue3-form-validation"
   },
   "scripts": {
-    "build": "npx eslint --rule=\"no-console:error\" --max-warnings 0 --fix-dry-run ./packages/vue3-form-validation && npx tsc --project ./packages/vue3-form-validation",
-    "build-watch": "npx tsc --project ./packages/vue3-form-validation --watch",
+    "build": "npm exec -- eslint --rule=\"no-console:error\" --max-warnings 0 --fix-dry-run ./packages/vue3-form-validation && npm exec -- tsc --project ./packages/vue3-form-validation",
+    "build-watch": "npm exec -- tsc --project ./packages/vue3-form-validation --watch",
     "test": "jest",
-    "test-dts": "npx tsc --project ./test-dts && npx tsd",
+    "test-dts": "npm exec -- tsc --project ./test-dts && npm exec -- tsd",
     "dev": "npm run dev -w vue-test-app",
-    "postinstall": "husky install",
-    "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable"
+    "postinstall": "husky install"
   },
   "devDependencies": {
     "@heroicons/vue": "^1.0.1",
