--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "url": "https://github.com/JensDll/vue3-form-validation"
   },
   "scripts": {
-    "build": "npm exec -- eslint --rule=\"no-console:error\" --max-warnings 0 --fix-dry-run ./packages/vue3-form-validation && npm exec -- tsc --project ./packages/vue3-form-validation",
+    "lint-check": "npm exec -- eslint --rule=\"no-console:error\" --max-warnings 0 --fix-dry-run ./packages/vue3-form-validation",
+    "build": "npm run lint-check && npm exec -- tsc --project ./packages/vue3-form-validation",
     "build-watch": "npm exec -- tsc --project ./packages/vue3-form-validation --watch",
     "dev": "npm run dev -w vue-test-app",
     "test": "jest",
     "test-dts": "npm exec -- tsc --project ./test-dts && npm exec -- tsd",
     "test-all": "npm run test-dts && npm test",
+    "publish": "node ./scripts/build.mjs && cd dist && npm publish",
     "postinstall": "husky install"
   },
   "devDependencies": {
@@ -34,6 +36,8 @@
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^7.10.0",
+    "execa": "^5.0.1",
+    "fs-extra": "^10.0.0",
     "husky": "^6.0.0",
     "jest": "^27.0.3",
     "lint-staged": "^11.0.0",
@@ -41,7 +45,7 @@
     "postcss": "^8.3.0",
     "postcss-nesting": "^8.0.1",
     "prettier": "^2.3.0",
-    "tailwindcss": "^2.1.2",
+    "tailwindcss": "^2.1.3",
     "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0",
     "tsd": "^0.16.0",
