--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   },
   "scripts": {
     "lint-check": "npm exec -- eslint --rule=\"no-console:error\" --max-warnings 0 --fix-dry-run ./packages/vue3-form-validation",
-    "build": "npm run lint-check && npm exec -- tsc --project ./packages/vue3-form-validation",
+    "build": "node ./scripts/build.mjs",
     "build-watch": "npm exec -- tsc --project ./packages/vue3-form-validation --watch",
     "dev": "npm run dev -w vue-test-app",
     "test": "jest",
     "test-dts": "npm exec -- tsc --project ./test-dts && npm exec -- tsd",
     "test-all": "npm run test-dts && npm test",
-    "publish": "node ./scripts/build.mjs && cd dist && npm publish",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "publish": "cd dist && npm publish"
   },
   "devDependencies": {
     "@heroicons/vue": "^1.0.1",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.0",
+    "@types/node": "^15.6.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "@vitejs/plugin-vue": "^1.2.3",
@@ -36,21 +36,21 @@
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-vue": "^7.10.0",
-    "execa": "^5.1.0",
+    "execa": "^5.0.1",
     "fs-extra": "^10.0.0",
     "husky": "^6.0.0",
-    "jest": "^27.0.4",
+    "jest": "^27.0.3",
     "lint-staged": "^11.0.0",
     "pinst": "^2.1.6",
     "postcss": "^8.3.0",
     "postcss-nesting": "^8.0.1",
     "prettier": "^2.3.0",
-    "tailwindcss": "^2.1.4",
+    "tailwindcss": "^2.1.3",
     "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0",
-    "tsd": "^0.17.0",
+    "tsd": "^0.16.0",
     "typescript": "^4.3.2",
-    "vite": "^2.3.6",
+    "vite": "^2.3.5",
     "vue": "^3.0.11",
     "vue-router": "^4.0.4",
     "vue-tsc": "^0.1.7"
