--- a/packages/vue-app/package.json
+++ b/packages/vue-app/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "@vitejs/plugin-vue": "^1.8.1",
     "autoprefixer": "^10.3.4",
     "postcss": "^8.3.6",
