--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "ES2020",
+    "useDefineForClassFields": true,
     "allowJs": false,
     "checkJs": false,
     "lib": ["ES2020", "DOM"],
