--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,5 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
-  "typescript.tsdk": "node_modules\\typescript\\lib",
-  "spellright.language": ["en"],
-  "spellright.documentTypes": ["markdown", "latex", "plaintext", "git-commit"]
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
