--- a/package.json
+++ b/package.json
@@ -8,46 +8,41 @@
     "dev": "node ./scripts/dev.js",
     "vue": "npm run dev --workspace=vue-app",
     "lint": "npm exec -- eslint --rule=\"no-console: error\" --max-warnings 0 --fix-dry-run ./packages/vue3-form-validation",
-    "build": "npm run lint && node ./scripts/build.js",
+    "build": "node ./scripts/build.js",
     "test": "jest --runInBand",
     "test-dts": "npm run build && npm exec -- tsd",
     "test-all": "npm run test-dts && npm test",
     "postinstall": "husky install"
   },
-  "prettier": {
-    "singleQuote": true,
-    "arrowParens": "avoid",
-    "trailingComma": "none",
-    "semi": false,
-    "endOfLine": "crlf"
-  },
   "types": "publish/dist/vue3-form-validation.d.ts",
   "tsd": {
     "directory": "test-dts"
   },
-  "devDependencies": {
+  "dependencies": {
+    "@microsoft/api-extractor": "^7.18.11",
     "@rollup/plugin-alias": "^3.1.5",
     "@rollup/plugin-typescript": "^8.2.5",
-    "@types/fs-extra": "^9.0.12",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.4",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "@vue/compiler-sfc": "^3.2.12",
+    "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
+    "@types/yargs": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "@vue/compiler-sfc": "^3.2.19",
     "eslint": "^7.32.0",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
-    "glob": "^7.1.7",
     "husky": "^7.0.2",
-    "jest": "^27.2.0",
+    "jest": "^27.2.4",
     "lint-staged": "^11.1.2",
     "pinst": "^2.1.6",
     "prettier": "^2.4.1",
-    "rollup": "^2.56.3",
-    "rollup-plugin-dts": "^4.0.0",
+    "rollup": "^2.58.0",
+    "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.5",
     "tsd": "^0.17.0",
     "typescript": "^4.4.3",
-    "vue": "^3.0.11"
+    "vue": "^3.0.11",
+    "yargs": "^17.2.1"
   }
 }
