--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "@vue/compiler-sfc": "^3.2.19",
+    "esbuild": "^0.13.3",
     "eslint": "^7.32.0",
-    "esno": "^0.10.0",
+    "esno": "^0.10.1",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.2",
@@ -38,6 +39,7 @@
     "pinst": "^2.1.6",
     "prettier": "^2.4.1",
     "rollup": "^2.58.0",
+    "rollup-plugin-esbuild": "^4.5.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.5",
     "tsd": "^0.17.0",
