--- a/packages/vue-app/package.json
+++ b/packages/vue-app/package.json
@@ -8,12 +8,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "1.0.4",
     "@tailwindcss/forms": "^0.3.4",
-    "@vitejs/plugin-vue": "^1.9.2",
-    "autoprefixer": "^10.3.6",
-    "postcss": "^8.3.8",
+    "@vitejs/plugin-vue": "^1.9.3",
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.9",
+    "postcss-nesting": "^8.0.1",
     "tailwindcss": "^2.2.16",
-    "vite": "^2.6.2",
+    "vite": "^2.6.3",
+    "vue-router": "^3.5.2",
     "vue-tsc": "^0.3.0"
   }
 }
