allow different validation behavior per rule and add configuration option for default values

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
+  "volar.preferredTagNameCase": "pascal",
   "editor.bracketPairColorization.enabled": true,
   "typescript.tsdk": "node_modules\\typescript\\lib"
 }
