--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,12 +7,17 @@ jobs:
       matrix:
         node-version: [15.x, 16.x]
     steps:
+      - run: |
+          npm
+          env
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
       - name: Install dependencies and build
         run: |
           npm ci
