--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,12 +18,13 @@ jobs:
       - name: Latest npm
         run: |
           npm i -g npm@7
-          env
       - name: Install dependencies and build
         run: |
-          npm ci
-          npm run build
-      - name: Run jest
-        run: npm run test
-      - name: Run tsd
-        run: npm run test-dts
+          npm --version
+          env
+      #     npm ci
+      #     npm run build
+      # - name: Run jest
+      #   run: npm run test
+      # - name: Run tsd
+      #   run: npm run test-dts
