--- a/packages/vue-app/package.json
+++ b/packages/vue-app/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "vue-app",
+  "description": "Vue composition function for Form Validation",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -22,6 +23,5 @@
     "vue-router": "^4.0.11",
     "vue-tsc": "^0.28.3",
     "vue3-form-validation": "5.0.0-beta.4"
-  },
-  "description": "Vue composition function for Form Validation"
+  }
 }
