--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@rollup/plugin-alias": "^3.1.5",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.9",
+    "@types/node": "^16.11.0",
     "@types/yargs": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -39,10 +39,10 @@
     "rollup": "^2.58.0",
     "rollup-plugin-esbuild": "^4.5.0",
     "rollup-plugin-typescript2": "^0.30.0",
-    "ts-jest": "^27.0.5",
+    "ts-jest": "^27.0.6",
     "tsd": "^0.18.0",
     "typescript": "^4.4.4",
-    "vue": "^3.0.11",
+    "vue": "3.2.20",
     "yargs": "^17.2.1"
   }
 }
