--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "esmo scripts/build.ts",
     "dev": "esmo scripts/dev.ts --targets vue3-form-validation",
-    "vue": "npm run dev --workspace=vue-app",
+    "examples": "npm run dev --workspace=examples",
+    "docs": "npm run dev --workspace=docs",
     "lint": "npm exec -- eslint --rule=\"no-console: [\"error\", { allow: [\"warn\", \"error\"] }]\" --max-warnings 0 --fix-dry-run ./packages/vue3-form-validation",
     "test": "jest --runInBand",
     "test-dts": "npm run build && npm exec -- tsd",
@@ -25,7 +26,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.0",
-    "@types/yargs": "^17.0.3",
+    "@types/yargs": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "esbuild": "^0.13.6",
@@ -37,7 +38,7 @@
     "jest": "^27.2.5",
     "prettier": "^2.4.1",
     "rollup": "^2.58.0",
-    "rollup-plugin-esbuild": "^4.5.0",
+    "rollup-plugin-esbuild": "^4.6.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.6",
     "tsd": "^0.18.0",
