--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "vue-examples",
-  "description": "Example Project - Vue composition function for Form Validation",
+  "name": "examples",
+  "description": "Vue composition function for Form Validation examples",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -21,7 +21,7 @@
     "vite": "^2.6.7",
     "vue": "3.2.20",
     "vue-router": "^4.0.11",
-    "vue-tsc": "^0.28.4",
+    "vue-tsc": "^0.28.6",
     "vue3-form-validation": "5.0.0-beta.4"
   }
 }
