--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [15.x, 16.x]
+        node-version: ['16.11.1']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
