--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "CommonJS",
+    "module": "ESNext",
     "useDefineForClassFields": true,
     "allowJs": false,
     "checkJs": false,
