add debounce option to field rule (#185)
* add debounce option to field rule

* add $dirty and $touched to transformed field + fix a bug with debounce

* avoid triggering watch when field values are reset

* fix test

* fix test now

* update doc comments

* trying to fix CI error

* use node version without breaking change in CI

* add FormInput component to example app

* fix set error precedence for rules that only sometimes return a promise

* add missing property to Form mock

* remove doubled if block

* release v5.0.0-beta.5

* update dependencies

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [15.x, 16.x]
+        node-version: ['16.11.1']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -17,12 +17,13 @@ jobs:
           cache-dependency-path: '**/package-lock.json'
       - name: Echo debug information
         run: |
+          node --version
           npm --version
           env
-      - name: Install dependencies and build
-        run: |
-          npm ci
-          npm run build
+      - name: Install dependencies
+        run: npm ci
+      - name: Build the project
+        run: npm run build
       - name: Run jest
         run: npm run test
       - name: Run tsd
