--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   ],
   "type": "module",
   "scripts": {
-    "build": "esmo scripts/build.ts",
-    "dev": "esmo scripts/dev.ts --targets vue3-form-validation",
+    "build": "node --experimental-loader esbuild-node-loader scripts/build.ts",
+    "dev": "node --experimental-loader esbuild-node-loader scripts/dev.ts --targets vue3-form-validation",
     "examples": "npm run dev --workspace=examples",
     "docs": "npm run dev --workspace=docs",
     "lint": "npm exec -- eslint --rule=\"no-console: [\"error\", { allow: [\"warn\", \"error\"] }]\" --max-warnings 0 --fix-dry-run ./packages/vue3-form-validation",
@@ -22,22 +22,22 @@
   },
   "dependencies": {
     "@microsoft/api-extractor": "^7.18.16",
-    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-alias": "^3.1.8",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.1",
+    "@types/node": "^16.11.4",
     "@types/yargs": "^17.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "esbuild": "^0.13.8",
-    "eslint": "^8.0.1",
-    "esno": "^0.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "esbuild": "^0.13.9",
+    "esbuild-node-loader": "^0.4.2",
+    "eslint": "^8.1.0",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
-    "husky": "^7.0.2",
-    "jest": "^27.2.5",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
-    "rollup": "^2.58.0",
+    "rollup": "^2.58.1",
     "rollup-plugin-esbuild": "^4.6.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.7",
