--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -22,6 +22,6 @@
     "vue": "3.2.20",
     "vue-router": "^4.0.11",
     "vue-tsc": "^0.28.9",
-    "vue3-form-validation": "5.0.0-beta.5"
+    "vue3-form-validation": "5.0.0"
   }
 }
