--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        id: setup-node
+        id: cache
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
@@ -24,8 +24,9 @@ jobs:
           node --version
           npm --version
           env
+          echo ${{ toJSON(steps) }}
       - name: Install dependencies
-        if: setup-node.outputs.cache-hit != 'true'
+        if: cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Build the project
         run: npm run build
