--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,17 +19,19 @@ jobs:
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
       - name: Echo debug information
+        env:
+          STEPS_CONTEXT: ${{ toJSON(steps) }}
         run: |
           ls -la
           node --version
           npm --version
           env
-          echo ${{ toJSON(steps) }}
+          echo "$STEPS_CONTEXT"
       - name: Install dependencies
         run: npm ci
-      - name: Build the project
-        run: npm run build
-      - name: Run jest
-        run: npm run test
-      - name: Run tsd
-        run: npm run test-dts-only
+      # - name: Build the project
+      #   run: npm run build
+      # - name: Run jest
+      #   run: npm run test
+      # - name: Run tsd
+      #   run: npm run test-dts-only
