--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        id: cache
+        id: setup-node
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
@@ -26,8 +26,8 @@ jobs:
           node --version
           npm --version
           env
-          echo "$STEPS_CONTEXT"
       - name: Install dependencies
+        if: steps.setup-node.outputs.cache-hit != 'true'
         run: npm ci
       # - name: Build the project
       #   run: npm run build
